[package]
name = "pyext-barcode"
version = "0.1.0"
authors = ["Rick Henry <fredericmhenry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "barcode"
crate-type = ["cdylib"]

[dependencies]
barcoders = {version = "1.0.2", features = ["image", "svg"]}


[dependencies.pyo3]
version = "0.11.1"
features = ["extension-module"]

